--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -13,7 +13,8 @@
     "lodash": "^4.17.21",
     "mobx": "^6.15.0",
     "mobx-vue-lite": "^0.4.3",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
