--- a/FormsApp/FormsApp.csproj
+++ b/FormsApp/FormsApp.csproj
@@ -8,7 +8,8 @@
 
     <ItemGroup>
         <PackageReference Include="FastEndpoints" Version="7.1.1" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10"/>
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.0" />
     </ItemGroup>
 
