added form and validation

--- a/ClientApp/tsconfig.app.json
+++ b/ClientApp/tsconfig.app.json
@@ -10,7 +10,10 @@
     "noUncheckedSideEffectImports": true,
     "strict": true,
     "erasableSyntaxOnly": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
