--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@ark-ui/vue": "^5.28.0",
+    "axios": "^1.13.2",
     "lodash": "^4.17.21",
     "mobx": "^6.15.0",
     "mobx-vue-lite": "^0.4.3",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
