--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -16,6 +16,8 @@
     "lodash": "^4.17.21",
     "mobx": "^6.15.0",
     "mobx-vue-lite": "^0.4.3",
+    "sweetalert2": "^11.26.3",
+    "toastr": "^2.1.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3",
     "zod": "^4.1.12"
@@ -24,6 +26,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.10.0",
+    "@types/toastr": "^2.1.43",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.22",
